--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet"href="style.css"/>
 </head>
 <body>
-    <h1>Milestone 4:Editable Resume Builder By Sarwat Afreen </h1>
+    <h1>Milestone 4:Editable Resume Builder By azhar </h1>
     <form id="resumeForm">
         <fieldset>
             <legend>Personal Information</legend>
